hphp/test/zend/good/ext/standard/tests/network/gethostbyname_error004.php.skipif
<?php
if (getenv("SKIP_SLOW_TESTS")) die("skip slow test");
if (getenv("SKIP_ONLINE_TESTS")) die("skip test requiring internet connection");
?>