hphp/test/zend/bad/tests/func/005a.php.skipif
<?php
if (getenv("SKIP_SLOW_TESTS")) die("skip slow test");
?>